--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ hyper = { version = "0.14.13", features = ["full"] }
 tokio = { version = "1.12.0", features = ["full"] }
 zip = "0.5.13"
 plist = "1.2.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+base64 = "0.13.0"
