--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ plist = "1.2.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 base64 = "0.13.0"
+chrono = { version = "0.4", features = ["serde"] }
