--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 base64 = "0.13.0"
 chrono = { version = "0.4", features = ["serde"] }
+tokio-util = { version = "0.6", default-features = false, features = ["io", "compat"] }
