--- a/src/assets/manifest.plist
+++ b/src/assets/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://localhost:3000/apps/newx/ipa</string>
+					<string>https://$HOST/apps/$ID/ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
