--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde_json = "1.0"
 base64 = "0.13.0"
 chrono = { version = "0.4", features = ["serde"] }
 tokio-util = { version = "0.6", default-features = false, features = ["io", "compat"] }
+thiserror = "1.0"
