--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ base64 = "0.13.0"
 chrono = { version = "0.4", features = ["serde"] }
 tokio-util = { version = "0.6", default-features = false, features = ["io", "compat"] }
 thiserror = "1.0"
+structopt = "0.3"
