--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,10 @@
 [package]
 name = "app-park"
-version = "0.2.3"
+version = "0.3.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-axum = "0.2.5"
+axum = "0.3.0"
 hyper = { version = "0.14.13", features = ["full"] }
 tokio = { version = "1.12.0", features = ["full"] }
 zip = "0.5.13"
@@ -18,3 +16,4 @@ chrono = { version = "0.4", features = ["serde"] }
 tokio-util = { version = "0.6", default-features = false, features = ["io", "compat"] }
 thiserror = "1.0"
 structopt = "0.3"
+notify = "5.0.0-pre.13"
